--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,19 @@
 a:visited{
   color: white;
+
 }
 
 *{
   font-family: 'Rock Salt', cursive;
-  background-image: url(http://wallpaperping.com/wp-content/uploads/2018/12/pexels-photo-691668.jpeg);
-background-repeat:no-repeat;
-background-position: top, left;
-background-attachment: fixed;
-
-background-size: 100%;
-
 }
 
 .sign {
-  color: #ffe6ff;
+  color: white;
   text-shadow: 0 0 0.6rem #ffe6ff, 0 0 1.5rem #ff65bd,
     -0.2rem 0.1rem 1rem #ff65bd, 0.2rem 0.1rem 1rem #ff65bd,
     0 -0.5rem 2rem #ff2483, 0 0.5rem 3rem #ff2483;
-    
 }
 
+.aboutMeBannerText p{
+  color: black;
+}
