--- a/src/components/aboutme/aboutme.css
+++ b/src/components/aboutme/aboutme.css
@@ -1,64 +1,54 @@
-.aboutMeGrid {
+.aboutMeGrid{
   text-align: center;
-  /* position: fixed; */
   top: 25%;
   left: 0;
   width: 100%;
-  height: 100%;
+  height:100%;
 }
 
-.aboutMeAvatarImg {
+.aboutMeAvatarImg{
+  
   height: 250px;
   padding: 5em;
 }
 
-.aboutMeBannerText {
-  /* background-color: black; */
-  /* opacity: .5; */
+.aboutMeBannerText{
+  border: 2px solid white;
   width: 75%;
   margin: auto;
-  /* border-radius: 5px; */
   line-height: 40px;
-}
-.aboutMeBannerText p {
+  text-align: left;
 
+}
+.aboutMeBannerText p{
+  font-size: 70px;
   font-weight: bold;
   line-height: 50px;
-  text-align: left;
-  color: black;
-  padding: 1em;
-  font-size: 20px;
 }
 
 .aboutMeBannerText hr {
-  width: 100%;
+  width: 50%;
   margin: auto;
-  border-top: 4px solid white;
 }
 
-/* .aboutMeBannerText p {
-  color: black;
+.aboutMeBannerText p{
+  color:white;
   padding: 1em;
   font-size: 20px;
-} */
 
-.aboutMeBannerText h1 {
-  color: black;
-  padding: 1em;
-  font-size: 40px;
-  text-align: left;
 }
 
-.aboutMeSocialLinks {
+.aboutMeSocialLinks{
   display: flex;
   justify-content: space-around;
   width: 25%;
   margin: auto;
 }
 
-.aboutMeSocialLinks i {
+.aboutMeSocialLinks i{
   color: white;
   font-size: 4em;
   padding: 10px;
   margin: 20px;
+
 }
