--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,27 +1,26 @@
-*{
-    color:white;
-}
+a[href^="mailto:"]{
+    color: white;
+  }
 
-
+  *{
+      color: white;
+  }
 .contactBody{
     margin: auto;
-    /* background: white; */
-    /* position: fixed; */
     width: 100%;
     height: 100%;
-    justify-content: center;
-    padding-top: 2em;
+    justify-content: left;
+    padding-top: 7%;
 
 }
 
 .contactGrid{
-    text-align: left;
+    text-align: center;
     justify-content: center;
     width: 80%;
     height: 550;
-    /* background: black; */
     color: black;
-    /* border: 2px solid white; */
+    border: 2px solid white;
     margin-bottom: 20px;
     margin-left: 10%;
 
@@ -29,43 +28,28 @@
 
 .contactGrid h2{
     font-family: 'Rock Salt', cursive;
-    font-size: 42px;
  
+
 }
 
-.contactGrid p{
+.contactGrid h4{
 font-weight: bold;
+font-family: 'Rock Salt', cursive;
 
 
 }
 .contactGrid hr{
-    width: 100%;
+    width: 50%;
     margin: auto;
     border-top: 4px solid white;
 
 }
 
-.contactList a:visited{
-    color: white;
-
-}
 
 
 .contactList i{
-    font-size: 66px;
+    font-size: 150%;
     padding-right: 5rem;
    
-}
-
-.footer a{
-    display: flex;
-    justify-content: space-around;
-    /* width: 25%; */
-    margin: auto;
-    color: black;
-    font-size: 4em;
-    padding: 10px;
-    /* margin-top: 40px; */
-    display: inline;
 
 }
