--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,60 +1,52 @@
-* {
-}
-
-.homeGrid {
+.homeGrid{
   text-align: center;
-  /* position: fixed; */
-  top: 50%;
+  position: fixed;
+  top: 25%;
   left: 0;
   width: 100%;
-  height: 20%;
-  /* margin-top: 50%; */
+  height:100%;
 }
 
-.avatarImg {
+.avatarImg{
   height: 250px;
   padding-top: 5em;
+
 }
 
-.bannerText {
+.bannerText{
   background-color: transparent;
+
 }
 
-.bannerText h1 {
-  font-size: 85px;
+.bannerText h1{
   font-weight: bolder;
-  color: white;
-  font-family: "Rock Salt", cursive;
+  color: black;
+  font-family: 'Rock Salt', cursive;
+
 }
-.bannerText h2 {
-  font-size: 66px;
+.bannerText h2{
   font-weight: bold;
-  color: white;
-  font-family: "Rock Salt", cursive;
+  font-family: 'Rock Salt', cursive;
+  padding: 1em;
+
 }
 
 .bannerText hr {
-  width: 78%;
+  width: 50%;
   margin: auto;
-  border-top: 4px solid white;
 }
 
-.bannerText p {
-  color: white;
-  padding: 1em;
-  font-size: 20px;
-}
-
-.socialLinks {
+.socialLinks{
   display: flex;
   justify-content: space-around;
   width: 25%;
   margin: auto;
 }
 
-.socialLinks i {
+.socialLinks i{
   color: white;
-  font-size: 4em;
+  font-size: 3em;
   padding: 10px;
   margin-top: 40px;
+
 }
