--- a/src/components/portfoio/portfolio.css
+++ b/src/components/portfoio/portfolio.css
@@ -1,10 +1,18 @@
+.sign h1{
+  color: white;
+  text-shadow: 0 0 0.6rem #ffe6ff, 0 0 1.5rem #ff65bd,
+    -0.2rem 0.1rem 1rem #ff65bd, 0.2rem 0.1rem 1rem #ff65bd,
+    0 -0.5rem 2rem #ff2483, 0 0.5rem 3rem #ff2483;
+    font-family: 'Rock Salt', cursive;
+}
+
+
 /* Hexagons */
 #hexGrid {
   overflow: hidden;
-  width: 90%;
+  width: 65%;
   margin: 0 auto;
   padding: 0.866% 0;
-  
   font-size: 20px;
 }
 
